--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/kirilllapushinskiy/py-env-file-parser/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GNU General Public License v3.0
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
 
 [options]
