Update version, description and python_requires.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = envfileparser
-version = 0.0.8
+version = 0.0.9
 author = Kirill Lapushinskiy
 author_email = kirilllapushinskiy@yahoo.com
-description = A small env file parser
+description = A small package for the work with .env file and files with similar structure.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/kirilllapushinskiy/py-env-file-parser
@@ -18,7 +18,7 @@ classifiers =
 package_dir =
     = source
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.8
 
 [options.packages.find]
 where = source
